--- a/src/app/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/components/confirmation-dialog/confirmation-dialog.component.html
@@ -1,8 +1,14 @@
-<h2 mat-dialog-title>Confirm Account Deletion</h2>
+<h2 mat-dialog-title>
+  {{ "DIALOG.CONFIRM_DELETE_ACCOUNT_TITLE" | translate }}
+</h2>
 <mat-dialog-content>
-  <p>You are about to delete this account. This action cannot be undone. Are you sure?</p>
+  <p>{{ "DIALOG.CONFIRM_DELETE_ACCOUNT_MESSAGE" | translate }}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close="cancel">Cancel</button>
-  <button mat-raised-button color="warn" [mat-dialog-close]="'confirm'">Delete</button>
+  <button mat-button mat-dialog-close="cancel">
+    {{ "ACTIONS.CANCEL" | translate }}
+  </button>
+  <button mat-raised-button color="warn" [mat-dialog-close]="'confirm'">
+    {{ "ACTIONS.DELETE" | translate }}
+  </button>
 </mat-dialog-actions>
