--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ $hover-color: #0056b3;
 
 * {
   margin: 0px;
-  padding: 0xpx;
+  padding: 0px;
   box-sizing: border-box;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
