--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -21,6 +21,7 @@ header {
       gap: 15px;
       margin: 0;
       padding: 0;
+      align-items: center;
       li {
         display: inline;
         a {
@@ -36,6 +37,110 @@ header {
       }
     }
   }
+}
+
+.language-switcher {
+  button {
+    background-color: transparent;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-right: 10px;
+    padding: 5px 10px;
+    color: #007bff;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+    overflow: hidden;
+
+    &:hover,
+    &.active {
+      background-color: #007bff;
+      color: #fff;
+      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 200%;
+      height: 100%;
+      background: linear-gradient(
+        120deg,
+        transparent,
+        rgba(255, 255, 255, 0.4),
+        transparent
+      );
+      transition: all 0.5s ease;
+    }
+
+    &:hover::before {
+      left: 100%;
+    }
+
+    &.active {
+      font-weight: bold;
+      background-color: #007bff;
+      color: #fff;
+    }
+  }
+}
+
+.rotate {
+  transform: rotate(180deg);
+  transition: transform 0.3s;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  flex-direction: column;
+
+  a {
+    color: #333;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #f1f1f1;
+    }
+  }
+
+  &.show {
+    display: flex;
+  }
+}
+.align-left {
+  right: 0;
+}
+
+.align-right {
+  left: 0;
 }
 
 @media (max-width: 792px) {
@@ -76,7 +181,7 @@ header {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 35px;
+        top: 5vh;
         right: 0;
         width: 100%;
         gap: 5px;
