--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -12,7 +12,7 @@
               id="content"
               rows="5"
               formControlName="content"
-              placeholder="Share your thoughts..."
+              [placeholder]="'POST.PLACEHOLDER' | translate"
             ></textarea>
             <div
               *ngIf="
@@ -24,20 +24,20 @@
               <small
                 *ngIf="updatePostForm.get('content')?.errors?.['maxlength']"
               >
-                Content cannot exceed 5000 characters.
+                {{ "POST.CONTENT_ERRORS.MAXLENGTH" | translate }}
               </small>
               <small
                 *ngIf="updatePostForm.get('content')?.errors?.['minlength']"
               >
-                Content cannot be null or white space.
+                {{ "POST.CONTENT_ERRORS.MINLENGTH" | translate }}
               </small>
               <small *ngIf="updatePostForm.get('content')?.errors?.['pattern']">
-                Content cannot be just white space.
+                {{ "POST.CONTENT_ERRORS.PATTERN" | translate }}
               </small>
               <small
                 *ngIf="updatePostForm.get('content')?.errors?.['required']"
               >
-                Content is required.
+                {{ "POST.CONTENT_ERRORS.REQUIRED" | translate }}
               </small>
             </div>
           </div>
@@ -68,7 +68,9 @@
               id="deleteImage"
               formControlName="deleteImage"
             />
-            <label for="deleteImage">Delete existing image</label>
+            <label for="deleteImage">
+              {{ "POST.DELETE_IMAGE" | translate }}
+            </label>
           </div>
 
           <div class="delete-media">
@@ -77,7 +79,9 @@
               id="deleteVideo"
               formControlName="deleteVideo"
             />
-            <label for="deleteVideo">Delete existing video</label>
+            <label for="deleteVideo">{{
+              "POST.DELETE_VIDEO" | translate
+            }}</label>
           </div>
 
           <div class="form-btns">
@@ -90,11 +94,36 @@
       </div>
 
       <ng-template #postDetails>
-        <p class="post-author">
-          <a [routerLink]="['/user-profile', post.authorName]"
-            >&#64;{{ post.authorName }}</a
+        <div class="post-author">
+          <a [routerLink]="['/user-profile', post.authorName]">{{
+            post.authorName
+          }}</a>
+          <div
+            class="post-options"
+            *ngIf="userName === post.authorName || userRole === 'admin'"
           >
-        </p>
+            <button
+              class="ellipsis-btn"
+              (click)="showPostOptions = !showPostOptions"
+            >
+              ⋯
+            </button>
+            <div class="dropdown-menu" *ngIf="showPostOptions">
+              <button
+                (click)="initUpdatePostForm(post); showPostOptions = false"
+                *ngIf="userName === post.authorName"
+              >
+                {{ "ACTIONS.EDIT" | translate }}
+              </button>
+              <button
+                class="cancel-btn"
+                (click)="onDeletePost(post.id); showPostOptions = false"
+              >
+                {{ "ACTIONS.DELETE" | translate }}
+              </button>
+            </div>
+          </div>
+        </div>
         <p class="post-content">{{ post.content }}</p>
         <div class="media">
           <img
@@ -109,51 +138,28 @@
             controls
             class="post-video"
           >
-            Your browser does not support the video tag.
+            {{ "POST.VIDEO_NOT_SUPPORTED" | translate }}
           </video>
         </div>
 
         <p class="post-date">
-          Created: {{ post.createdDate | date : "medium" }}
+          {{ "POST.CREATED" | translate }}:
+          {{ post.createdDate | date : "medium" }}
           <br />
           <span *ngIf="post.modifiedDate">
-            Modified: {{ post.modifiedDate | date : "medium" }}
+            {{ "POST.MODIFIED" | translate }}:
+            {{ post.modifiedDate | date : "medium" }}
           </span>
         </p>
-        <div
-          class="post-options"
-          *ngIf="userName === post.authorName || userRole === 'admin'"
-        >
-          <button
-            class="ellipsis-btn"
-            (click)="showPostOptions = !showPostOptions"
-          >
-            ⋯
-          </button>
-          <div class="dropdown-menu" *ngIf="showPostOptions">
-            <button
-              (click)="initUpdatePostForm(post); showPostOptions = false"
-              *ngIf="userName === post.authorName"
-            >
-              Edit Post
-            </button>
-            <button
-              class="cancel-btn"
-              (click)="onDeletePost(post.id); showPostOptions = false"
-            >
-              Delete Post
-            </button>
-          </div>
-        </div>
       </ng-template>
       <div class="comments-section">
-        <h3>Comments</h3>
+        <h3>{{ "POST.COMMENTS" | translate }}</h3>
         <div class="comment-form">
           <form [formGroup]="commentForm" (ngSubmit)="onAddComment()">
             <textarea
               formControlName="content"
               rows="3"
-              placeholder="Share your thoughts..."
+              [placeholder]="'POST.PLACEHOLDER' | translate"
             ></textarea>
             <div
               *ngIf="
@@ -166,30 +172,67 @@
                 *ngIf="
                 commentForm.get('content')?.errors?.['maxlength']"
               >
-                Comment cannot exceed 1000 characters.
+                {{ "POST.COMMENT.ERRORS.MAXLENGTH" | translate }}
               </small>
               <small
                 *ngIf="
                 commentForm.get('content')?.errors?.['pattern']"
               >
-                Comment cannot be just whitespace.
+                {{ "POST.COMMENT.ERRORS.PATTERN" | translate }}
               </small>
             </div>
             <button
               type="submit"
               [disabled]="commentForm.invalid || isSubmitting"
             >
-              Comment
+              {{ "POST.COMMENT.SUBMIT" | translate }}
             </button>
           </form>
         </div>
         <div *ngIf="comments.length > 0; else noComments">
           <div *ngFor="let comment of comments" class="comment">
-            <p class="comment-user">
-              <a [routerLink]="['/user-profile', comment.userName]">{{
-                comment.userName
-              }}</a>
-            </p>
+            <div class="comment-user">
+              <a [routerLink]="['/user-profile', comment.userName]">
+                {{ comment.userName }}
+              </a>
+              <div
+                class="comment-options"
+                *ngIf="
+                  comment.userName === userName ||
+                  post.authorName === userName ||
+                  userRole === 'admin'
+                "
+              >
+                <button
+                  class="ellipsis-btn"
+                  (click)="toggleCommentMenu(comment.commentId)"
+                >
+                  ⋯
+                </button>
+                <div
+                  class="dropdown-menu"
+                  *ngIf="activeCommentMenu === comment.commentId"
+                >
+                  <button
+                    (click)="
+                      initUpdateCommentForm(comment); activeCommentMenu = null
+                    "
+                    *ngIf="comment.userName === userName"
+                  >
+                    {{ "ACTIONS.EDIT" | translate }}
+                  </button>
+                  <button
+                    class="cancel-btn"
+                    (click)="
+                      onDeleteComment(comment.commentId);
+                      activeCommentMenu = null
+                    "
+                  >
+                    {{ "ACTIONS.DELETE" | translate }}
+                  </button>
+                </div>
+              </div>
+            </div>
 
             <div
               *ngIf="editingCommentId === comment.commentId; else commentText"
@@ -199,7 +242,11 @@
                 [formGroup]="updateCommentForm"
                 (ngSubmit)="onUpdateComment(comment)"
               >
-                <textarea formControlName="content" rows="3"></textarea>
+                <textarea
+                  formControlName="content"
+                  rows="3"
+                  [placeholder]="'POST.PLACEHOLDER' | translate"
+                ></textarea>
                 <div
                   *ngIf="updateCommentForm.get('content')?.invalid"
                   class="error-message"
@@ -207,12 +254,12 @@
                   <small
                     *ngIf="updateCommentForm.get('content')?.errors?.['maxlength']"
                   >
-                    Comment cannot exceed 1000 characters.
+                    {{ "POST.COMMENT.ERRORS.MAXLENGTH" | translate }}
                   </small>
                   <small
                     *ngIf="updateCommentForm.get('content')?.errors?.['pattern']"
                   >
-                    Comment cannot be just whitespace.
+                    {{ "POST.COMMENT.ERRORS.PATTERN" | translate }}
                   </small>
                 </div>
                 <div class="form-btns">
@@ -238,62 +285,6 @@
               <p class="comment-date">
                 {{ comment.createdDate | date : "short" }}
               </p>
-              <div
-                class="comment-options"
-                *ngIf="
-                  comment.userName === userName ||
-                  post.authorName === userName ||
-                  userRole === 'admin'
-                "
-              >
-                <button
-                  class="ellipsis-btn"
-                  (click)="toggleCommentMenu(comment.commentId)"
-                >
-                  ⋯
-                </button>
-                <div
-                  class="dropdown-menu"
-                  *ngIf="activeCommentMenu === comment.commentId"
-                >
-                  <button
-                    (click)="
-                      initUpdateCommentForm(comment); activeCommentMenu = null
-                    "
-                    *ngIf="comment.userName === userName"
-                  >
-                    Edit
-                  </button>
-                  <button
-                    class="cancel-btn"
-                    (click)="
-                      onDeleteComment(comment.commentId);
-                      activeCommentMenu = null
-                    "
-                  >
-                    Delete
-                  </button>
-                </div>
-              </div>
-              <!-- <div class="form-btns">
-                <button
-                  (click)="initUpdateCommentForm(comment)"
-                  *ngIf="comment.userName === userName"
-                >
-                  Edit
-                </button>
-                <button
-                  class="cancel-btn"
-                  (click)="onDeleteComment(comment.commentId)"
-                  *ngIf="
-                    comment.userName === userName ||
-                    post.authorName === userName ||
-                    this.userRole === 'admin'
-                  "
-                >
-                  Delete
-                </button>
-              </div> -->
             </ng-template>
           </div>
           <div class="pagination">
@@ -302,19 +293,19 @@
               (click)="loadMoreComments()"
               class="btn-load-more"
             >
-              Load More Comments
+              {{ "POST.LOAD_MORE" | translate }}
             </button>
           </div>
         </div>
         <ng-template #noComments>
-          <p class="no-comments">No comments yet.</p>
+          <p class="no-comments">{{ "POST.NO_COMMENTS" | translate }}</p>
         </ng-template>
       </div>
     </div>
     <ng-template #loadingPost>
       <div class="spinner-overlay">
         <div class="spinner"></div>
-        <p>Loading post...</p>
+        <p>{{ "POST.LOADING" | translate }}</p>
       </div>
     </ng-template>
   </div>
