--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -195,16 +195,17 @@ button {
   }
 }
 
+.comment-options,
 .post-options {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  position: relative;
+  .dropdown-menu {
+    top: 70%;
+  }
 }
 
 .ellipsis-btn {
   background: none;
   border: none;
-  padding: 5px 10px;
   font-size: 2rem;
   cursor: pointer;
   color: #000;
@@ -212,12 +213,11 @@ button {
 
 .dropdown-menu {
   position: absolute;
-  right: 0;
   top: 80%;
   background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
-  width: 110px;
+  width: fit-content;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 100;
 
@@ -239,23 +239,18 @@ button {
   }
 }
 
+.comment-user,
+.post-author {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 20px;
+}
+
 .comment {
-  position: relative;  /* Add this */
   padding: 15px;
   margin-bottom: 15px;
   background: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
-
-.comment .comment-options {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-.comment .dropdown-menu {
-  top: 100%;
-  right: 0;
-  margin-top: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
